Update some components and preparation for next version
